// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`field-reference.numeric (provider=cockroachdb, fieldType=BigInt, runtime=edge) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation:

{
  where: {
    quantity: {
      gt: prisma.product.fields.wrongType
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
  }
}

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected BigInt or BigIntFieldRefInput.


`;

exports[`field-reference.numeric (provider=cockroachdb, fieldType=BigInt, runtime=node) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX })
  XX 
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany({
         where: {
           quantity: {
             gt: prisma.product.fields.wrongType
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
           }
         }
       })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected BigInt or BigIntFieldRefInput.


`;

exports[`field-reference.numeric (provider=cockroachdb, fieldType=Float, runtime=edge) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation:

{
  where: {
    quantity: {
      gt: prisma.product.fields.wrongType
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
  }
}

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected Float or FloatFieldRefInput.


`;

exports[`field-reference.numeric (provider=cockroachdb, fieldType=Float, runtime=node) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX })
  XX 
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany({
         where: {
           quantity: {
             gt: prisma.product.fields.wrongType
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
           }
         }
       })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected Float or FloatFieldRefInput.


`;

exports[`field-reference.numeric (provider=cockroachdb, fieldType=Int, runtime=edge) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation:

{
  where: {
    quantity: {
      gt: prisma.product.fields.wrongType
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
  }
}

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided FloatFieldRefInput<Product>, expected Int or IntFieldRefInput.


`;

exports[`field-reference.numeric (provider=cockroachdb, fieldType=Int, runtime=node) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX })
  XX 
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany({
         where: {
           quantity: {
             gt: prisma.product.fields.wrongType
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
           }
         }
       })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided FloatFieldRefInput<Product>, expected Int or IntFieldRefInput.


`;

exports[`field-reference.numeric (provider=mongodb, fieldType=BigInt, runtime=edge) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation:

{
  where: {
    quantity: {
      gt: prisma.product.fields.wrongType
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
  }
}

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected BigInt or BigIntFieldRefInput.


`;

exports[`field-reference.numeric (provider=mongodb, fieldType=BigInt, runtime=node) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX })
  XX 
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany({
         where: {
           quantity: {
             gt: prisma.product.fields.wrongType
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
           }
         }
       })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected BigInt or BigIntFieldRefInput.


`;

exports[`field-reference.numeric (provider=mongodb, fieldType=Float, runtime=edge) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation:

{
  where: {
    quantity: {
      gt: prisma.product.fields.wrongType
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
  }
}

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected Float or FloatFieldRefInput.


`;

exports[`field-reference.numeric (provider=mongodb, fieldType=Float, runtime=node) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX })
  XX 
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany({
         where: {
           quantity: {
             gt: prisma.product.fields.wrongType
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
           }
         }
       })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected Float or FloatFieldRefInput.


`;

exports[`field-reference.numeric (provider=mongodb, fieldType=Int, runtime=edge) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation:

{
  where: {
    quantity: {
      gt: prisma.product.fields.wrongType
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
  }
}

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided FloatFieldRefInput<Product>, expected Int or IntFieldRefInput.


`;

exports[`field-reference.numeric (provider=mongodb, fieldType=Int, runtime=node) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX })
  XX 
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany({
         where: {
           quantity: {
             gt: prisma.product.fields.wrongType
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
           }
         }
       })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided FloatFieldRefInput<Product>, expected Int or IntFieldRefInput.


`;

exports[`field-reference.numeric (provider=mysql, fieldType=BigInt, runtime=edge) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation:

{
  where: {
    quantity: {
      gt: prisma.product.fields.wrongType
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
  }
}

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected BigInt or BigIntFieldRefInput.


`;

exports[`field-reference.numeric (provider=mysql, fieldType=BigInt, runtime=node) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX })
  XX 
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany({
         where: {
           quantity: {
             gt: prisma.product.fields.wrongType
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
           }
         }
       })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected BigInt or BigIntFieldRefInput.


`;

exports[`field-reference.numeric (provider=mysql, fieldType=Float, runtime=edge) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation:

{
  where: {
    quantity: {
      gt: prisma.product.fields.wrongType
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
  }
}

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected Float or FloatFieldRefInput.


`;

exports[`field-reference.numeric (provider=mysql, fieldType=Float, runtime=node) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX })
  XX 
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany({
         where: {
           quantity: {
             gt: prisma.product.fields.wrongType
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
           }
         }
       })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected Float or FloatFieldRefInput.


`;

exports[`field-reference.numeric (provider=mysql, fieldType=Int, runtime=edge) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation:

{
  where: {
    quantity: {
      gt: prisma.product.fields.wrongType
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
  }
}

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided FloatFieldRefInput<Product>, expected Int or IntFieldRefInput.


`;

exports[`field-reference.numeric (provider=mysql, fieldType=Int, runtime=node) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX })
  XX 
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany({
         where: {
           quantity: {
             gt: prisma.product.fields.wrongType
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
           }
         }
       })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided FloatFieldRefInput<Product>, expected Int or IntFieldRefInput.


`;

exports[`field-reference.numeric (provider=postgresql, fieldType=BigInt, runtime=edge) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation:

{
  where: {
    quantity: {
      gt: prisma.product.fields.wrongType
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
  }
}

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected BigInt or BigIntFieldRefInput.


`;

exports[`field-reference.numeric (provider=postgresql, fieldType=BigInt, runtime=node) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX })
  XX 
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany({
         where: {
           quantity: {
             gt: prisma.product.fields.wrongType
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
           }
         }
       })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected BigInt or BigIntFieldRefInput.


`;

exports[`field-reference.numeric (provider=postgresql, fieldType=Float, runtime=edge) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation:

{
  where: {
    quantity: {
      gt: prisma.product.fields.wrongType
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
  }
}

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected Float or FloatFieldRefInput.


`;

exports[`field-reference.numeric (provider=postgresql, fieldType=Float, runtime=node) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX })
  XX 
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany({
         where: {
           quantity: {
             gt: prisma.product.fields.wrongType
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
           }
         }
       })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected Float or FloatFieldRefInput.


`;

exports[`field-reference.numeric (provider=postgresql, fieldType=Int, runtime=edge) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation:

{
  where: {
    quantity: {
      gt: prisma.product.fields.wrongType
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
  }
}

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided FloatFieldRefInput<Product>, expected Int or IntFieldRefInput.


`;

exports[`field-reference.numeric (provider=postgresql, fieldType=Int, runtime=node) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX })
  XX 
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany({
         where: {
           quantity: {
             gt: prisma.product.fields.wrongType
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
           }
         }
       })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided FloatFieldRefInput<Product>, expected Int or IntFieldRefInput.


`;

exports[`field-reference.numeric (provider=sqlite, fieldType=BigInt, runtime=node) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX })
  XX 
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany({
         where: {
           quantity: {
             gt: prisma.product.fields.wrongType
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
           }
         }
       })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected BigInt or BigIntFieldRefInput.


`;

exports[`field-reference.numeric (provider=sqlite, fieldType=Float, runtime=node) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX })
  XX 
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany({
         where: {
           quantity: {
             gt: prisma.product.fields.wrongType
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
           }
         }
       })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected Float or FloatFieldRefInput.


`;

exports[`field-reference.numeric (provider=sqlite, fieldType=Int, runtime=node) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX })
  XX 
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany({
         where: {
           quantity: {
             gt: prisma.product.fields.wrongType
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
           }
         }
       })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided FloatFieldRefInput<Product>, expected Int or IntFieldRefInput.


`;

exports[`field-reference.numeric (provider=sqlserver, fieldType=BigInt, runtime=edge) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation:

{
  where: {
    quantity: {
      gt: prisma.product.fields.wrongType
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
  }
}

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected BigInt or BigIntFieldRefInput.


`;

exports[`field-reference.numeric (provider=sqlserver, fieldType=BigInt, runtime=node) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX })
  XX 
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany({
         where: {
           quantity: {
             gt: prisma.product.fields.wrongType
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
           }
         }
       })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected BigInt or BigIntFieldRefInput.


`;

exports[`field-reference.numeric (provider=sqlserver, fieldType=Float, runtime=edge) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation:

{
  where: {
    quantity: {
      gt: prisma.product.fields.wrongType
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
  }
}

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected Float or FloatFieldRefInput.


`;

exports[`field-reference.numeric (provider=sqlserver, fieldType=Float, runtime=node) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX })
  XX 
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany({
         where: {
           quantity: {
             gt: prisma.product.fields.wrongType
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
           }
         }
       })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected Float or FloatFieldRefInput.


`;

exports[`field-reference.numeric (provider=sqlserver, fieldType=Int, runtime=edge) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation:

{
  where: {
    quantity: {
      gt: prisma.product.fields.wrongType
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
  }
}

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided FloatFieldRefInput<Product>, expected Int or IntFieldRefInput.


`;

exports[`field-reference.numeric (provider=sqlserver, fieldType=Int, runtime=node) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX })
  XX 
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany({
         where: {
           quantity: {
             gt: prisma.product.fields.wrongType
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
           }
         }
       })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided FloatFieldRefInput<Product>, expected Int or IntFieldRefInput.


`;
